--- a/css/style-alt-1.css
+++ b/css/style-alt-1.css
@@ -1,8 +1,6 @@
 html, body{
 	font-family: Arial, sans-serif;
 	margin: 0;
-	text-align: center;
-	font-size: 20px;
 }
 
 header{
@@ -14,69 +12,50 @@ header{
 }
 
 h1{
-	font-size: 80px;
+	font-size: 70px;
 	color: white;
-	text-shadow: 0 4px 20px black;
-	margin: 0;
-	text-transform: uppercase;
 }
 
 header img{
 	border-radius: 174px;
-    width: 300px;
-    border: 24px solid #CC3E3E;
-    box-shadow: 0 10px 20px black;
+    width: 250px;
+    border: 10px solid #4f8dff;
 }
 
 .content{
-	background-color: #E6E6E6;
 	max-width: 900px;
-	margin: 20px auto;
-	padding: 20px 20px;
-}
-
-h2{
-	font-size: 40px;
-	color: #CC3E3E;
-	margin-bottom: 0;
-}
-
-p{
-	margin-top: 0;
-	color: #00007A;
-}
-
-ol{
-	list-style: none;
-	padding: 0;
-	margin: 0 0 20px;
+	margin: 0 auto;
+	padding: 0 20px;
 }
 
 img.big-image{
+	margin-top: 20px;
 	max-width: 100%;
 }
 
 p.caption{
 	font-size: 16px;
-	color: #A3A3A3;
+	color: grey;
 	font-style: italic;
+	text-align: center;
 }
 
 ul{
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	color: #00007A;
 }
 
 a{
-	color: #CC3E3E;
+	color: red;
 	text-decoration: none;
 }
+
 
 footer{
 	margin-top: 20px;
 	padding: 40px 20px;
+	background-color: #E6E6E6;
 }
 
 footer ul{
@@ -87,7 +66,3 @@ footer ul li{
 	display: inline-block;
 	margin: 0 5px;
 }
-
-
-
-
