improved text and style

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1{
 header img{
 	border-radius: 174px;
     width: 250px;
-    border: 10px solid #4f8dff;
+    border: 7px solid white;
 }
 
 .content{
